# QCut

./: .buildinfo  .gitignore  .readthedocs.yaml  Acknowledgement.html  CHANGELOG.rst  Changelog.html  Examples.html  FutureFeatures.html  License.html  Multiple_cuts.html  Notebooks.html  OtherObservables.html  QCut.html  README.md  REM.html  Usage.html  __init__.py  genindex.html  helmi_wirecut.py  helper.py  helperGates.py  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  ruff.toml  search.html  searchindex.js  setup.py  tag-from-pipeline.sh  wirecut.py
.doctrees/: Acknowledgement.doctree  Changelog.doctree  Examples.doctree  FutureFeatures.doctree  License.doctree  Multiple_cuts.doctree  Notebooks.doctree  OtherObservables.doctree  QCut.doctree  REM.doctree  Usage.doctree  environment.pickle  index.doctree
.doctrees/examples/: QCutBasicUsage.doctree  QCutCutSubsequentWires.doctree  QCutCutToThreeParts.doctree  QCutMultipleCutsOnSingleWire.doctree
.github/workflows/: ci.yml  publish.yml  publish_docs.yml  publish_to_pypi.yml  publish_to_pypi_and_testpypi.yml  tag_and_release.yml
QCut/: __init__.py  backend_utility.py  helmi_wirecut.py  helper.py  identity_QPD.py  qpd_gates.py  wirecut.py
_modules/: index.html
_modules/QCut/: backend_utility.html  helper.html  (+1 more)
_sources/: Acknowledgement.rst  index.rst
docs/: Examples.rst  FutureFeatures.rst  License.rst  Multiple_cuts.rst  Notebooks.rst  OtherObservables.rst  QCut.rst  REM.rst  Usage.rst  conf.py  index.rst  modules.rst  requirements-docs.txt  test_report.xml
examples/: QCutBasicUsage.html  QCutBasicUsage.ipynb  QCutCutSubsequentWires.html  QCutCutSubsequentWires.ipynb  QCutCutToThreeParts.html  QCutCutToThreeParts.ipynb  QCutMultipleCutsOnSingleWire.html  QCutMultipleCutsOnSingleWire.ipynb
tests/: solutions.py  test_QCut.py
(+57 files in other folders)
